MDEV-23966 btr_search_sys->hash_tables accessed without taking proper ahi latch

In btr_search_update_hash_on_insert(), btr_search_sys->hash_tables is
being accessed without taking proper ahi latch. During buffer pool
resizing, btr_get_search_table() is being accessed and it leads to
segmentation fault. Taking ahi lock before btr_search_sys->hash_tables.