storage/innobase/btr/btr0sea.cc
@@ -1843,7 +1843,7 @@ btr_search_update_hash_on_insert(btr_cur_t* cursor, rw_lock_t* ahi_latch)
 				     n_bytes, index->id);
 	}
 
-	hash_table_t* const table = btr_get_search_table(index);
+	hash_table_t* table;
 	bool locked = false;
 
 	if (!page_rec_is_infimum(rec) && !rec_is_metadata(rec, index)) {
@@ -1860,6 +1860,8 @@ btr_search_update_hash_on_insert(btr_cur_t* cursor, rw_lock_t* ahi_latch)
 				goto function_exit;
 			}
 
+			table = btr_get_search_table(block->index);
+
 			ha_insert_for_fold(table, ins_fold, block, ins_rec);
 		}
 
@@ -1875,6 +1877,8 @@ btr_search_update_hash_on_insert(btr_cur_t* cursor, rw_lock_t* ahi_latch)
 			if (!btr_search_enabled || !block->index) {
 				goto function_exit;
 			}
+
+			table = btr_get_search_table(block->index);
 		}
 
 		if (!left_side) {
@@ -1895,6 +1899,8 @@ check_next_rec:
 				if (!btr_search_enabled || !block->index) {
 					goto function_exit;
 				}
+
+				table = btr_get_search_table(block->index);
 			}
 
 			ha_insert_for_fold(table, ins_fold, block, ins_rec);
@@ -1911,6 +1917,8 @@ check_next_rec:
 			if (!btr_search_enabled || !block->index) {
 				goto function_exit;
 			}
+
+			table = btr_get_search_table(block->index);
 		}
 
 		if (!left_side) {
